RESOLVED FIXED310510
[AppKit Gestures] Clicking PDF form controls does not always work
https://bugs.webkit.org/show_bug.cgi?id=310510
Summary [AppKit Gestures] Clicking PDF form controls does not always work
Richard Robinson
Reported 2026-03-22 21:10:12 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-22 21:10:20 PDT
Richard Robinson
Comment 2 2026-03-22 21:11:18 PDT
EWS
Comment 3 2026-03-23 02:34:09 PDT
Committed 309743@main (83e38a6172c8): <https://commits.webkit.org/309743@main> Reviewed commits have been landed. Closing PR #61140 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.