Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm
@@ -1979,7 +1979,7 @@ auto UnifiedPDFPlugin::pdfElementTypesForPagePoint(const IntPoint& pointInPDFPag
 
 #pragma mark Events
 
-static bool NODELETE isContextMenuEvent(const WebMouseEvent& event)
+static bool NODELETE isContextMenuEvent(const auto& event)
 {
 #if PLATFORM(MAC)
     return event.menuTypeForEvent();
@@ -1989,7 +1989,7 @@ static bool NODELETE isContextMenuEvent(const WebMouseEvent& event)
 #endif
 }
 
-bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
+bool UnifiedPDFPlugin::handleMouseEvent(const WebCore::PlatformMouseEvent& event)
 {
     m_lastMouseEvent = event;
 
@@ -1998,7 +1998,7 @@ bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
 
     // Even if the mouse event isn't handled (e.g. because the event is over a page we shouldn't
     // display in Single Page mode), we should stop tracking selections (and soon autoscrolling) on MouseUp.
-    auto stopStateTrackingIfNeeded = makeScopeExit([this, protectedThis = Ref { *this }, isMouseUp = event.type() == WebEventType::MouseUp] {
+    auto stopStateTrackingIfNeeded = makeScopeExit([this, protectedThis = Ref { *this }, isMouseUp = event.type() == WebCore::PlatformEventType::MouseReleased] {
         if (isMouseUp) {
             stopTrackingSelection();
             stopAutoscroll();
@@ -2013,7 +2013,7 @@ bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
     auto mouseEventButton = event.button();
     auto mouseEventType = event.type();
     // Context menu events always call handleContextMenuEvent as well.
-    if (mouseEventType == WebEventType::MouseDown && isContextMenuEvent(event)) {
+    if (mouseEventType == WebCore::PlatformEventType::MousePressed && isContextMenuEvent(event)) {
         bool contextMenuEventIsInsideDocumentBounds = presentationController->pageIndexForDocumentPoint(pointInDocumentSpace).has_value();
         if (contextMenuEventIsInsideDocumentBounds)
             beginTrackingSelection(pageIndex, pointInPageSpace, event);
@@ -2026,10 +2026,10 @@ bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
 #endif
 
     switch (mouseEventType) {
-    case WebEventType::MouseMove:
+    case WebCore::PlatformEventType::MouseMoved:
         mouseMovedInContentArea();
         switch (mouseEventButton) {
-        case WebMouseEventButton::None: {
+        case WebCore::MouseButton::None: {
             auto altKeyIsActive = event.altKey() ? AltKeyIsActive::Yes : AltKeyIsActive::No;
             auto pdfElementTypes = pdfElementTypesForPluginPoint(lastKnownMousePositionInView());
             notifyCursorChanged(toWebCoreCursorType(pdfElementTypes, altKeyIsActive));
@@ -2043,7 +2043,7 @@ bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
 
             return true;
         }
-        case WebMouseEventButton::Left: {
+        case WebCore::MouseButton::Left: {
             if (RetainPtr trackedAnnotation = m_annotationTrackingState.trackedAnnotation()) {
                 RetainPtr annotationUnderMouse = annotationForRootViewPoint(flooredIntPoint(event.position()));
                 updateTrackedAnnotation(annotationUnderMouse.get());
@@ -2058,9 +2058,9 @@ bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
         default:
             return false;
         }
-    case WebEventType::MouseDown:
+    case WebCore::PlatformEventType::MousePressed:
         switch (mouseEventButton) {
-        case WebMouseEventButton::Left: {
+        case WebCore::MouseButton::Left: {
             if (RetainPtr<PDFAnnotation> annotation = annotationForRootViewPoint(flooredIntPoint(event.position()))) {
                 if ([annotation isReadOnly]
                     && annotationIsWidgetOfType(annotation.get(), { WidgetType::Button, WidgetType::Text, WidgetType::Choice }))
@@ -2088,9 +2088,9 @@ bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
         default:
             return false;
         }
-    case WebEventType::MouseUp:
+    case WebCore::PlatformEventType::MouseReleased:
         switch (mouseEventButton) {
-        case WebMouseEventButton::Left:
+        case WebCore::MouseButton::Left:
             if (RetainPtr trackedAnnotation = m_annotationTrackingState.trackedAnnotation(); trackedAnnotation && !annotationIsWidgetOfType(trackedAnnotation.get(), WidgetType::Text)) {
                 RetainPtr annotationUnderMouse = annotationForRootViewPoint(flooredIntPoint(event.position()));
                 finishTrackingAnnotation(annotationUnderMouse.get(), mouseEventType, mouseEventButton);
@@ -2122,6 +2122,11 @@ bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
     default:
         return false;
     }
+}
+
+bool UnifiedPDFPlugin::handleMouseEvent(const WebMouseEvent& event)
+{
+    return handleMouseEvent(platform(event));
 }
 
 bool UnifiedPDFPlugin::handleMouseEnterEvent(const WebMouseEvent&)
@@ -2244,7 +2249,7 @@ void UnifiedPDFPlugin::repaintAnnotationsForFormField(NSString *fieldName)
 #endif
 }
 
-void UnifiedPDFPlugin::startTrackingAnnotation(RetainPtr<PDFAnnotation>&& annotation, WebEventType mouseEventType, WebMouseEventButton mouseEventButton)
+void UnifiedPDFPlugin::startTrackingAnnotation(RetainPtr<PDFAnnotation>&& annotation, WebCore::PlatformEventType mouseEventType, WebCore::MouseButton mouseEventButton)
 {
     auto repaintRequirements = m_annotationTrackingState.startAnnotationTracking(WTF::move(annotation), mouseEventType, mouseEventButton);
     setNeedsRepaintForAnnotation(protect(m_annotationTrackingState.trackedAnnotation()).get(), repaintRequirements);
@@ -2267,7 +2272,7 @@ void UnifiedPDFPlugin::updateTrackedAnnotation(PDFAnnotation *annotationUnderMou
     setNeedsRepaintForAnnotation(currentTrackedAnnotation.get(), repaintRequirements);
 }
 
-void UnifiedPDFPlugin::finishTrackingAnnotation(PDFAnnotation *annotationUnderMouse, WebEventType mouseEventType, WebMouseEventButton mouseEventButton, RepaintRequirements repaintRequirements)
+void UnifiedPDFPlugin::finishTrackingAnnotation(PDFAnnotation *annotationUnderMouse, WebCore::PlatformEventType mouseEventType, WebCore::MouseButton mouseEventButton, RepaintRequirements repaintRequirements)
 {
     // AnnotationTrackingState::finishAnnotationTracking() will clear this, so hold on to it.
     RetainPtr previouslyTrackedAnnotation = m_annotationTrackingState.trackedAnnotation();
@@ -2944,7 +2949,7 @@ void UnifiedPDFPlugin::selectAll()
 
 #pragma mark Selections
 
-auto UnifiedPDFPlugin::selectionGranularityForMouseEvent(const WebMouseEvent& event) const -> SelectionGranularity
+auto UnifiedPDFPlugin::selectionGranularityForMouseEvent(const WebCore::PlatformMouseEvent& event) const -> SelectionGranularity
 {
     if (event.clickCount() == 2)
         return SelectionGranularity::Word;
@@ -2969,7 +2974,7 @@ void UnifiedPDFPlugin::extendCurrentSelectionIfNeeded()
     setCurrentSelection(WTF::move(selection));
 }
 
-void UnifiedPDFPlugin::beginTrackingSelection(PDFDocumentLayout::PageIndex pageIndex, const WebCore::FloatPoint& pagePoint, const WebMouseEvent& event)
+void UnifiedPDFPlugin::beginTrackingSelection(PDFDocumentLayout::PageIndex pageIndex, const WebCore::FloatPoint& pagePoint, const WebCore::PlatformMouseEvent& event)
 {
     auto modifiers = event.modifiers();
 
@@ -2978,8 +2983,8 @@ void UnifiedPDFPlugin::beginTrackingSelection(PDFDocumentLayout::PageIndex pageI
     m_selectionTrackingData.startPageIndex = pageIndex;
     m_selectionTrackingData.startPagePoint = pagePoint;
     m_selectionTrackingData.marqueeSelectionRect = { };
-    m_selectionTrackingData.shouldMakeMarqueeSelection = modifiers.contains(WebEventModifier::AltKey);
-    m_selectionTrackingData.shouldExtendCurrentSelection = modifiers.contains(WebEventModifier::ShiftKey);
+    m_selectionTrackingData.shouldMakeMarqueeSelection = modifiers.contains(WebCore::PlatformEventModifier::AltKey);
+    m_selectionTrackingData.shouldExtendCurrentSelection = modifiers.contains(WebCore::PlatformEventModifier::ShiftKey);
     m_selectionTrackingData.selectionToExtendWith = nullptr;
 
     // Context menu events can only generate a word selection under the event, so we bail out of the rest of our selection tracking logic.
@@ -4175,7 +4180,7 @@ void UnifiedPDFPlugin::handlePDFActionForAnnotation(PDFAnnotation *annotation, P
 }
 #endif
 
-RepaintRequirements AnnotationTrackingState::startAnnotationTracking(RetainPtr<PDFAnnotation>&& annotation, WebEventType mouseEventType, WebMouseEventButton mouseEventButton)
+RepaintRequirements AnnotationTrackingState::startAnnotationTracking(RetainPtr<PDFAnnotation>&& annotation, WebCore::PlatformEventType mouseEventType, WebCore::MouseButton mouseEventButton)
 {
     ASSERT(!m_trackedAnnotation);
     m_trackedAnnotation = WTF::move(annotation);
@@ -4187,7 +4192,7 @@ RepaintRequirements AnnotationTrackingState::startAnnotationTracking(RetainPtr<P
         repaintRequirements.add(UnifiedPDFPlugin::repaintRequirementsForAnnotation(m_trackedAnnotation.get()));
     }
 
-    if (mouseEventType == WebEventType::MouseMove && mouseEventButton == WebMouseEventButton::None) {
+    if (mouseEventType == WebCore::PlatformEventType::MouseMoved && mouseEventButton == WebCore::MouseButton::None) {
         if (!m_isBeingHovered)
             repaintRequirements.add(RepaintRequirement::HoverOverlay);
 
@@ -4197,12 +4202,12 @@ RepaintRequirements AnnotationTrackingState::startAnnotationTracking(RetainPtr<P
     return repaintRequirements;
 }
 
-RepaintRequirements AnnotationTrackingState::finishAnnotationTracking(PDFAnnotation *annotationUnderMouse, WebEventType mouseEventType, WebMouseEventButton mouseEventButton)
+RepaintRequirements AnnotationTrackingState::finishAnnotationTracking(PDFAnnotation *annotationUnderMouse, WebCore::PlatformEventType mouseEventType, WebCore::MouseButton mouseEventButton)
 {
     ASSERT(m_trackedAnnotation);
     auto repaintRequirements = RepaintRequirements { };
 
-    if (annotationUnderMouse == m_trackedAnnotation && mouseEventType == WebEventType::MouseUp && mouseEventButton == WebMouseEventButton::Left) {
+    if (annotationUnderMouse == m_trackedAnnotation && mouseEventType == WebCore::PlatformEventType::MouseReleased && mouseEventButton == WebCore::MouseButton::Left) {
         if ([m_trackedAnnotation isHighlighted]) {
             [m_trackedAnnotation setHighlighted:NO];
             repaintRequirements.add(UnifiedPDFPlugin::repaintRequirementsForAnnotation(m_trackedAnnotation.get()));
@@ -4779,19 +4784,31 @@ void UnifiedPDFPlugin::clearSelection()
 
 void UnifiedPDFPlugin::handleSyntheticClick(PlatformMouseEvent&& event)
 {
+#if HAVE(PDFDOCUMENT_SELECTION_WITH_GRANULARITY)
+    auto handledMouseEvent = false;
+    if (event.inputSource() == WebCore::MouseEventInputSource::Automation)
+        handledMouseEvent = handleMouseEvent(event);
+
+    if (event.type() == WebCore::PlatformEventType::MousePressed)
+        return;
+#endif // HAVE(PDFDOCUMENT_SELECTION_WITH_GRANULARITY)
+
 #if ENABLE(PDF_HUD)
     if (shouldShowHUD()) {
         RefPtr frame = m_frame.get();
         if (RefPtr page = frame ? frame->page() : nullptr)
             page->showPDFHUD(*this);
     }
-#endif
+#endif // ENABLE(PDF_HUD)
 
 #if ENABLE(PDF_PAGE_NUMBER_INDICATOR)
     updatePageNumberIndicator();
 #endif
 
 #if HAVE(PDFDOCUMENT_SELECTION_WITH_GRANULARITY)
+    if (handledMouseEvent)
+        return;
+
     auto pointInRootView = event.position();
     if (RetainPtr annotation = annotationForRootViewPoint(IntPoint(pointInRootView))) {
         if (annotationIsLinkWithDestination(annotation.get()))
